--- a/frontend/hoardr/src/App.css
+++ b/frontend/hoardr/src/App.css
@@ -10,15 +10,41 @@
 
 ul {
     list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
-a:link { text-decoration: none; }
+a:link { 
+    text-decoration: none; 
+}
 
 
-a:visited { text-decoration: none; }
+a:visited { 
+    text-decoration: none; 
+}
 
 
-a:hover { text-decoration: none; }
+a:hover { 
+    text-decoration: none; 
+}
 
 
-a:active { text-decoration: none; }
+a:active { 
+    text-decoration: none; 
+}
+
+.navbar > .container {
+    max-width: 100%;
+    margin: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+#search-bar {
+    padding-right: 55px;
+}  
+
+.navbar {
+    margin: 0;
+    padding: 0;
+}
