--- a/frontend/hoardr/src/App.css
+++ b/frontend/hoardr/src/App.css
@@ -35,16 +35,21 @@ a:active {
 
 .navbar > .container {
     max-width: 100%;
-    margin: 10px;
-    padding-left: 20px;
+    margin: 8px;
+    padding-left: 25px;
     padding-right: 20px;
   }
 
 #search-bar {
     padding-right: 25px;
+    width: 40%;
 }  
 
 .navbar {
     margin: 0;
     padding: 0;
+}
+
+#form-required {
+    color: red;
 }
