Added user image and username to review

--- a/frontend/hoardr/src/App.css
+++ b/frontend/hoardr/src/App.css
@@ -3,9 +3,14 @@
     height: 300px;
 }
 
-#box-art {
+#review-pic {
     height: 20%;
     width: 20%;
+    margin-right: 10px;
+}
+
+#review-user {
+    margin-top: 20px;
 }
 
 ul {
