Added delete button to video game reviews that becomes disabled if not the user

--- a/frontend/hoardr/src/App.css
+++ b/frontend/hoardr/src/App.css
@@ -9,8 +9,9 @@
     margin-right: 10px;
 }
 
-#review-user {
-    margin-top: 20px;
+#close-button {
+    padding-left: 30rem;
+    position: fixed;
 }
 
 ul {
