shrunk video game card size, and moved elements within the card

--- a/frontend/hoardr/src/App.css
+++ b/frontend/hoardr/src/App.css
@@ -10,7 +10,8 @@
 }
 
 #close-button {
-    padding-left: 33rem;
+    padding-left: 29rem;
+    /* padding-top: 2rem; */
     position: absolute;
 }
 
