--- a/frontend/hoardr/src/App.css
+++ b/frontend/hoardr/src/App.css
@@ -1,7 +1,3 @@
-.profile-pic {
-    width: 300px;
-    height: 300px;
-}
 
 #review-pic {
     height: 20%;
@@ -39,21 +35,35 @@ a:active {
     text-decoration: none; 
 }
 
-.navbar > .container {
-    max-width: 100%;
-    margin: 15px;
-    padding-left: 25px;
-    padding-right: 20px;
-  }
+.navbar-brand {
+    font-size: large;
+    padding-top: 1.5rem;
+    position: relative;
+    text-decoration: none;
+    white-space: nowrap;
+}
 
 #search-bar {
+    margin-left: 10rem;
     padding-right: 25px;
     width: 40%;
 }  
 
 .navbar {
+    font-size: medium;
     margin: 0;
     padding: 0;
+}
+
+.navbar > .container {
+    margin-left: 2rem;
+    margin-right: 2rem;
+    max-width: 100%;
+}
+
+.navbar-expand .navbar-nav .dropdown-menu {
+    position: absolute;
+    font-size: 16px;
 }
 
 #form-required, #error-message {
